--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Hello World</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Fat Cat</h1>
+    <img src="chonk.jpg" alt="chonk cat">
+
   </body>
 </html>
