--- a/index.html
+++ b/index.html
@@ -2,10 +2,40 @@
 <html>
   <head>
     <title>Hello World</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <h1>Fat Cat</h1>
-    <img src="chonk.jpg" alt="chonk cat">
+    <section>
+
+      <div class="row">
+        <div class="column">
+          <div class="card">
+            <img src="img/fatcat1.jpg" alt="chonk cat 1" height="200px">
+            <h1>Fat Cat</h1>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <img src="img/fatcat2.jpg" alt="chonk cat 2" height="200px">
+            <h1>Another Fat Cat</h1>
+          </div>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="column">
+          <div class="card">
+            <img src="img/fatcat3.jpg" alt="chonk cat 3" height="200px">
+            <h1>One more Fat Cat</h1>
+          </div>
+        </div>
+
+      </div>
+      
+    </section>
+
 
   </body>
 </html>
+
+
